# hobbes-chess-engine

./: .gitattributes  .gitignore  Cargo.toml  MULTITHREADING_GUIDE.md  Makefile  README.md  TODO.md  build.rs  hello  hobbes-chess-engine  network.txt  network_history.txt  params.txt  prompt.md  schedule.txt  t.txt
.github/workflows/: bench.yml  release.yml
hobbes-nnue-arch/: Cargo.toml
hobbes-nnue-arch/src/: arch.rs  lib.rs  permute.rs  preprocess.rs
resources/: TODO.md  hobbes-random.nnue  merged_king_planes.py  net_chart.py  net_history.txt  new_command_processor.py  t.txt
src/: attacks.rs  bench.rs  bits.rs  board.rs  consts.rs  correction.rs  datagen.rs  eval.rs  evaluate.rs  evaluation.rs  fen.rs  history.rs  magics.rs  main.rs  marlin.rs  movegen.rs  movepicker.rs  moves.rs  network.rs  nnue.rs  ordering.rs  parameters.rs  perft.rs  piece.rs  scharnagl.rs  search.rs  see.rs  simd.rs  t.txt  thread.rs  time.rs  tt.rs  types.rs  uci.rs  utils.rs  zobrist.rs
src/board/: attacks.rs  bitboard.rs  castling.rs  cuckoo.rs  file.rs  legal.rs  magics.rs  movegen.rs  moves.rs  observer.rs  phase.rs  piece.rs  rank.rs  ray.rs  side.rs  square.rs  zobrist.rs
src/evaluation/: accumulator.rs  arch.rs  cache.rs  feature.rs  mod.rs  multilayer.rs  network.rs  simd.rs  sparse.rs  stats.rs  t.txt  threats.rs  update.rs
src/nnue/: cache.rs  debug0.txt  debug1.txt  feature.rs  mod.rs
src/search/: channel.rs  correction.rs  engine.rs  hindsight.rs  history.rs  lmr.rs  movepicker.rs  node.rs  parameters.rs  rfp.rs  score.rs  see.rs  stack.rs  t.txt  temp.txt  thread.rs  (+3 more)
(+38 files in other folders)
