[package]
name = "hobbes-chess-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.4"
rand = { version = "0.9.2", optional = false }
chrono = "0.4.41"
viriformat = "2.0.0"

[[bin]]
name = "hobbes-chess-engine"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
tuning = []
avx2 = []
#dategen = ["dep: viriformat", "dep:rand"]